--- a/DatingSite/Dating_Site_App/templates/Dating_Site_App/Profile.html
+++ b/DatingSite/Dating_Site_App/templates/Dating_Site_App/Profile.html
@@ -13,7 +13,7 @@
 <main role="main">
     <div class="jumbotron" style="padding: 100px;">
         <div class="container">
-            <h1 class="display-3">Hello, {{user.get_full_name}}</h1>
+            <h1 class="display-3" style="margin-bottom:20px">Hello, {{user.get_full_name}}</h1>
 
             <div style="display: grid; grid-template-columns: 3fr 1fr; column-gap: 25px">
                 <div>
@@ -24,7 +24,7 @@
                         <span style="border-radius: 0 .25rem .25rem 0;" class="input-group-text" id="basic-addon1">{{user.username}}</span>
                     </div>
                     
-                    <div style="display: grid; grid-template-columns: 1fr 1fr; width: 50%; column-gap: 25px">
+                    <div style="display: grid; grid-template-columns: 1fr 1fr; column-gap: 25px">
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
                             <span class="input-group-text" id="basic-addon1">First Name</span>
@@ -82,7 +82,7 @@
                 </div>
 
                 <div>
-                    <img src="{{user.profile.profilephoto.url}}" alt="{{user.profile.profilephoto.url}}" class="img-thumbnail" width=1000 height=1000>
+                    <img src="{{user.profile.profilephoto.url}}" alt="{{user.profile.profilephoto.url}}" class="img-thumbnail" width=1000 height=1000 style="margin-bottom: 5rem">
                 </div>
 
             </div>
