--- a/DatingSite/Dating_Site_App/templates/Dating_Site_App/login.html
+++ b/DatingSite/Dating_Site_App/templates/Dating_Site_App/login.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-{% if user.is_authenticated %}
+{% if request.user.is_authenticated %}
 <main role="main">
     <div class="jumbotron" style="padding: 100px;">
         <div class="container">
