--- a/DatingSite/Dating_Site_App/templates/Dating_Site_App/base.html
+++ b/DatingSite/Dating_Site_App/templates/Dating_Site_App/base.html
@@ -46,14 +46,14 @@
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">Other options</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="#">Blocklist</a>
+                        <a class="dropdown-item" href="{% url 'blocklist' %}">Blocklist</a>
                     </div>
                 </li>
                 {% endblock Dropdown %}
                 {% block LogoutButton %}
                 <li class="nav-item" style="display: flex; align-items:center;">
                     <div style="width: 100%;">
-                        <a style="height: 2rem; display: flex; align-items: center; margin-left: 10px" class="btn btn-light" href="{% url 'logout' %}">Logout</a>
+                        <a style="height: 2rem; display: flex; align-items: center; margin-left: 10px" class="nav-link" href="{% url 'logout' %}">Logout</a>
                     </div>
                 </li>
                 {% endblock LogoutButton %}
