--- a/DatingSite/Dating_Site_App/templates/Dating_Site_App/home.html
+++ b/DatingSite/Dating_Site_App/templates/Dating_Site_App/home.html
@@ -11,11 +11,11 @@
         <div class="container">
             <h1 class="display-3" style="margin-bottom: 50px;">Hello, {{currUser.get_full_name}}</h1>
             <div style="display: flex; justify-content: space-around; flex-direction: row;">
-                <div style="display: grid; grid-template-columns: auto auto auto;">
+                <div style="display: grid; grid-template-columns: auto auto auto; row-gap: 20px; column-gap: 20px">
                     {% for user_,age in filteredUsers.items %}
                         <div>
-                            <div class="card" style="width: 15rem; margin: 0 10px 20px 10px;">
-                                <img style="padding: 10px" class="card-img-top" src="{{user_.profile.profilephoto.url}}" alt="{{user_.profile.profilephoto.url}}">
+                            <div class="card" style="width: 15rem; height: 100%;">
+                                <img style="padding: 20px" class="card-img-top" src="{{user_.profile.profilephoto.url}}" alt="{{user_.profile.profilephoto.url}}">
                                 <div class="card-body">
                                 <h5 class="card-title">{{user_.get_full_name}}</h5>
                                 <p class="card-text">{{user_.profile.bio}}</p>
@@ -25,15 +25,15 @@
                                 <li class="list-group-item" id="agelabel">Age: {{age}}</li>
                                 <li class="list-group-item">Status: {{user_.profile.status}}</li>
                                 </ul>
-                                <div class="card-body">
+                                <div class="card-body" style="display: flex; flex-direction: column">
                                 {% if user_ in sentfriendReqList %}
-                                <button style="margin: 5 5 5 5" type="button" class="btn btn-light">Request Sent!</button>
+                                <a style="margin: 5 5 5 5;" class="btn btn-light" href="{% url 'unsendmessagerequest' user_.username %}">Unsend Message Request</a>
                                 {% elif user_ in friendList %}
                                 <button style="margin: 5 5 5 5" type="button" class="btn btn-success">Matched!</button>
                                 {% elif user_ in incomingRequests %}
                                 <a style="margin: 5 5 5 5" class="btn btn-info" href="{% url 'messagerequestspage' %}">Response Pending!</a>
                                 {% else %}
-                                <a style="margin: 5 5 5 5; font-size: .875rem" class="btn btn-primary" href="{% url 'sendmessagerequest' user_.username %}">Send Message Request</a>
+                                <a style="margin: 5 5 5 5;" class="btn btn-primary" href="{% url 'sendmessagerequest' user_.username %}">Send Message Request</a>
                                 {% endif %}
                                 <a style="margin: 5 5 5 5;" class="btn btn-secondary" href="{{user_.username}}/">Go to Profile</a>
                                 </div>
