Edited Chat and Final Touches

--- a/DatingSite/Chat_App/templates/Chat_App/chathome.html
+++ b/DatingSite/Chat_App/templates/Chat_App/chathome.html
@@ -10,8 +10,8 @@
 
 {% block content %}
 
-<main role="main">
-    <div class="jumbotron" style="padding: 100px; padding-top: 50px;">
+<main role="main" style="height: 100%">
+    <div class="jumbotron" style="padding: 100px; padding-top: 50px; margin-bottom: 0; height: 100%">
         <div class="container">
             <h1 class="display-3" style="margin-bottom: 3rem;">Hello, {{currUser.get_full_name}}</h1>
             <div style="display: grid; grid-template-columns: 30% 70%; column-gap: 20px; justify-items: center;">
