--- a/DatingSite/Dating_Site_App/templates/Dating_Site_App/base.html
+++ b/DatingSite/Dating_Site_App/templates/Dating_Site_App/base.html
@@ -70,6 +70,14 @@
     {% block content %}
     {% endblock %}
 
+    
 </body>
+
+<footer>
+    <div style="display: grid; grid-template-columns: auto auto;">
+        <a href="https://github.com/Jain-Nishkarsh" style="margin: 5px 0 5px 20px; color: #6c757d;">Nishkarsh Jain</a>
+        <a href="https://github.com/Jain-Nishkarsh/SUTT-BackendTask3-DatingSite/issues" style="margin: 5px 20px 5px auto; color: #6c757d;">Report a bug</a>
+    </div>
+</footer>
 
 </html>
