--- a/DatingSite/Dating_Site_App/templates/Dating_Site_App/editProfile.html
+++ b/DatingSite/Dating_Site_App/templates/Dating_Site_App/editProfile.html
@@ -8,9 +8,9 @@
 
 {% block content %}
 
-<main role="main">
+<main role="main" style="height: 100%">
 
-    <div class="jumbotron" style="padding: 100px;">
+    <div class="jumbotron" style="padding: 100px; margin-bottom: 0; height: 100%">
         <div class="container">
             <h1 class="display-3" style="margin-bottom: 20px">Hello, {{user.get_full_name}}</h1>
 
