--- a/DatingSite/Dating_Site_App/templates/Dating_Site_App/home.html
+++ b/DatingSite/Dating_Site_App/templates/Dating_Site_App/home.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <main role="main">
-    <div class="jumbotron" style="padding: 100px; padding-top: 50px;">
+    <div class="jumbotron" style="padding: 100px; padding-top: 50px; margin-bottom: 0;">
         <div class="container">
             <h1 class="display-3" style="margin-bottom: 50px;">Hello, {{currUser.get_full_name}}</h1>
             <div style="display: flex; justify-content: space-around; flex-direction: row;">
