--- a/DatingSite/Dating_Site_App/templates/Dating_Site_App/login.html
+++ b/DatingSite/Dating_Site_App/templates/Dating_Site_App/login.html
@@ -12,8 +12,8 @@
 {% block content %}
 
 {% if request.user.is_authenticated %}
-<main role="main">
-    <div class="jumbotron" style="padding: 100px;">
+<main role="main" style="height: 100%">
+    <div class="jumbotron" style="padding: 100px; margin-bottom: 0; height: 100%">
         <div class="container">
             <h1 class="display-3">Hello, {{currUser.get_full_name}}</h1>
         </div>
@@ -21,8 +21,8 @@
 </main>
 
 {% else %}
-<main role="main">
-    <div class="jumbotron" style="padding: 100px; height=100%">
+<main role="main" style="height: 100%">
+    <div class="jumbotron" style="padding: 100px; height=100% margin-bottom: 0; height: 100%">
         <div class="container" style="display:flex">
             <div class="card text-center" style="width: 50%; margin: auto; height:20rem">
                 <div class="card-body" style="display: flex; align-items: center; flex-direction: column; justify-content: center;">
