--- a/DatingSite/Dating_Site_App/templates/Dating_Site_App/messageRequestsPage.html
+++ b/DatingSite/Dating_Site_App/templates/Dating_Site_App/messageRequestsPage.html
@@ -10,8 +10,8 @@
 {% endblock %}
 
 {% block content %}
-<main role="main">
-    <div class="jumbotron" style="padding: 100px; padding-top: 50px">
+<main role="main" style="height: 100%;">
+    <div class="jumbotron" style="padding: 100px; margin-bottom: 0; height: 100%;">
         <div class="container">
             <h1 class="display-3" style="margin-bottom: 20px;"><b>Message Requests - {{ignoredRequestscount}}</b></h1>
             {% comment %} {% if unreadRequestscount > 0 %}
