--- a/DatingSite/Dating_Site_App/templates/Dating_Site_App/base.html
+++ b/DatingSite/Dating_Site_App/templates/Dating_Site_App/base.html
@@ -30,7 +30,8 @@
         </button>
         
         <div class="collapse navbar-collapse" id="navbarsExampleDefault" style="">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav mr-auto" style="margin-right: 0 !important; width: 100%; display: grid; grid-template-columns: auto auto;">
+                <div style="display: flex;">
                 {% block ProfileButton %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'profile' currUser.username %}">Profile <span class="sr-only">(current)</span></a>
@@ -56,13 +57,27 @@
                     </div>
                 </li>
                 {% endblock Dropdown %}
+                </div>
+
+                <div style="display: flex; justify-content: flex-end;">
+                {% block ModButtons %}
+                {% if currUser.is_superuser %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'Moderator:modhome' %}">Moderator Page</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'admin:index' %}">Admin Portal</a>
+                </li>
+                {% endif %}
+                {% endblock %}
                 {% block LogoutButton %}
                 <li class="nav-item" style="display: flex; align-items:center;">
                     <div style="width: 100%;">
-                        <a style="height: 2rem; display: flex; align-items: center; margin-left: 10px" class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        <a style="height: 2rem; display: flex; align-items: center;" class="nav-link" href="{% url 'logout' %}">Logout</a>
                     </div>
                 </li>
                 {% endblock LogoutButton %}
+                </div>
             </ul>
         </div>
     </nav>
