--- a/DatingSite/Dating_Site_App/templates/Dating_Site_App/editProfile.html
+++ b/DatingSite/Dating_Site_App/templates/Dating_Site_App/editProfile.html
@@ -111,7 +111,7 @@
                     </div>
                 </div>
             </div>
-            <input type="submit" class="btn btn-primary" href="#" style="margin-top: 1rem"></input>
+            <input type="submit" class="btn btn-primary" href="#" style="margin-top: 1rem" value="Save Changes!"></input>
             
             </form>
         </div>
