--- a/DatingSite/Dating_Site_App/templates/Dating_Site_App/home.html
+++ b/DatingSite/Dating_Site_App/templates/Dating_Site_App/home.html
@@ -50,6 +50,8 @@
                             <form action="{% url 'home' %}" method="post">
                             {% csrf_token %}
 
+                            <input style="margin-bottom: 16px;" name="searchBox" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" value={{userFilters.searchBox}}>
+
                             <div style="margin-bottom: 16px">
                                 <p style="margin-bottom: 0">Gender: </p>
                                 <div class="form-check">
