--- a/DatingSite/Dating_Site_App/templates/Dating_Site_App/login.html
+++ b/DatingSite/Dating_Site_App/templates/Dating_Site_App/login.html
@@ -8,6 +8,7 @@
 {% block MessageRequestButton %}{% endblock MessageRequestButton %}
 {% block Dropdown %}{% endblock Dropdown %}
 {% block LogoutButton %}{% endblock LogoutButton %}
+{% block ModButtons %}{% endblock ModButtons %}
 
 {% block content %}
 
@@ -15,7 +16,7 @@
 <main role="main" style="height: 100%">
     <div class="jumbotron" style="padding: 100px; margin-bottom: 0; height: 100%">
         <div class="container">
-            <h1 class="display-3">Hello, {{currUser.get_full_name}}</h1>
+            <h1 class="display-3">Hello, {{request.user.get_full_name}}</h1>
         </div>
     </div>
 </main>
@@ -28,7 +29,7 @@
                 <div class="card-body" style="display: flex; align-items: center; flex-direction: column; justify-content: center;">
                   <h5 class="card-title">You're not logged in!</h5>
                   <a href="/accounts/google/login/" class="btn btn-primary" style="margin-bottom:5rem">Login with BITS ID</a>
-                  <a class="btn btn-link" href="{% url 'admin:index' %}" role="button">Moderator Login</a>
+                  <a class="btn btn-link" href="{% url 'modLoginPage' %}" role="button">Moderator Login</a>
                 </div>
             </div>
         </div>
